1280
I have another example if it's any use:
{code}

public class Test {

  @Deprecated
  <A extends CharSequence> A foo(A a) {
      return a;
  }

  public static void main(String[] args) {
      
      System.out.println(new Test().foo("Hello, world"));
  }
}
{code}

{code}
gondolin ~/tmp % scalac Test.java 
Test.java:5: error: `>' expected but `extends' found.
  <A extends CharSequence> A foo(A a) {
     ^
Test.java:13: error: illegal start of type
}
^
two errors found
{code}

The problem goes away if the annotation is removed, or the method is marked public.

scala -version = 2.7.2.RC6
